# tact

./: .dockerignore  AGENTS.md  Cargo.toml  README.md  RELEASES.md  build.rs  install.sh  justfile
.github/workflows/: ci.yaml  docker.yml  release.yaml
docker/: README.md  docker-bake.hcl  justfile  tact.dockerfile
src/: auth.rs  browser.rs  cli.rs  config.rs  core.rs  error.rs  main.rs  mcp.rs  secret.rs  shutdown.rs  skills.rs  subagents.rs  update.rs
src/tui/: agent_events.rs  bench.rs  clipboard.rs  context.rs  editor.rs  format.rs  mod.rs  pane.rs  prompt.rs  scheduler.rs  session.rs  shell.rs  spinner.rs  subagent_updates.rs  terminal.rs  theme.rs  worker.rs
src/tui/components/: actions.rs  app.rs  composer.rs  context_diagnostics.rs  effort.rs  file_finder.rs  floating.rs  keybindings.rs  mod.rs  node.rs  queue.rs  root.rs  selection.rs  session_picker.rs  subagents.rs  theme_selector.rs  waved_text.rs
src/tui/components/composer/: history.rs  layout.rs
src/tui/components/transcript/: diff.rs  empty.rs  highlight.rs  markdown.rs  mod.rs  tool.rs
src/tui/components/transcript/tool/: code.rs  media.rs  patch.rs  plan.rs  shell.rs  web.rs
src/tui/transcript/: entry.rs  journal.rs  mod.rs  model.rs  record.rs
