[package]
name = "tact"
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["Ben Clabby"]
description = "Terminal interface for Nanocodex"
license = "Apache-2.0"
repository = "https://github.com/clabby/tact"
homepage = "https://github.com/clabby/tact"
documentation = "https://docs.rs/tact"
readme = "README.md"
keywords = ["ai", "coding-agent", "llm", "terminal", "tui"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.6.4", features = ["derive", "env"] }
crossterm = { version = "0.29.0", features = ["event-stream", "osc52"] }
dark-light = "2.0.0"
futures-util = "0.3.33"
miette = { version = "7.6.0", features = ["fancy"] }
nanocodex = { git = "https://github.com/clabby/nanocodex", branch = "cl/restore-sessions" }
nanocodex-core = { git = "https://github.com/clabby/nanocodex", branch = "cl/restore-sessions" }
pulldown-cmark = { version = "0.13.4", default-features = false }
png = "0.18.1"
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.151", features = ["raw_value"] }
shlex = "2.0.1"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "regex-onig"] }
tempfile = "3.27.0"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.19", features = ["rt"] }
toml = "1.1.3"
toml_edit = "0.25.13"
unicode-segmentation = "1.13.3"
unicode-width = "0.2.2"
zeroize = { version = "1.9.0", features = ["derive"] }
zstd = "0.13.3"

[dev-dependencies]
criterion = "0.8.2"
rstest = "0.26.1"
tower = "0.5.3"

[features]

[[bin]]
name = "tact"
path = "src/main.rs"

[[bench]]
name = "tui"
path = "src/tui/bench.rs"
harness = false
