[package]
name = "tact"
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["Ben Clabby"]
description = "Terminal interface for Nanocodex"
license = "Apache-2.0"
repository = "https://github.com/clabby/tact"
homepage = "https://github.com/clabby/tact"
documentation = "https://docs.rs/tact"
readme = "README.md"
keywords = ["ai", "coding-agent", "llm", "terminal", "tui"]
categories = ["command-line-interface", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.tar.gz"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.6.4", features = ["derive", "env"] }
crossterm = { version = "0.29.0", features = ["event-stream", "osc52"] }
dark-light = "2.0.0"
flate2 = "1.1.9"
futures-util = "0.3.33"
miette = { version = "7.6.0", features = ["fancy"] }
minisign-verify = "0.2.5"
nanocodex = { git = "https://github.com/clabby/nanocodex", rev = "5a4ac47bce4ff9be9c3f0ec7ef66299722725177" }
nanocodex-core = { git = "https://github.com/clabby/nanocodex", rev = "5a4ac47bce4ff9be9c3f0ec7ef66299722725177" }
pulldown-cmark = { version = "0.13.4", default-features = false }
png = "0.18.1"
ratatui = "0.30.2"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
self-replace = "1.5.0"
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.151", features = ["raw_value"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
shlex = "2.0.1"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "regex-onig"] }
tar = "0.4.44"
tempfile = "3.27.0"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.19", features = ["rt"] }
toml = "1.1.3"
toml_edit = "0.25.13"
unicode-segmentation = "1.13.3"
unicode-width = "0.2.2"
url = "2.5.7"
zeroize = { version = "1.9.0", features = ["derive"] }
zstd = "0.13.3"

[dev-dependencies]
criterion = "0.8.2"
rstest = "0.26.1"
tower = "0.5.3"

[features]

[[bin]]
name = "tact"
path = "src/main.rs"

[[bench]]
name = "tui"
path = "src/tui/bench.rs"
harness = false
